Fixes bug where resizing the window would cause a comment to get a scrollbar

--- a/public/css/desktop.css
+++ b/public/css/desktop.css
@@ -403,7 +403,7 @@ body {
 
 .commentsContainer {
 	width:100%;
-	overflow:auto;
+	overflow:visible;
 }
 
 .commentPadding {
@@ -486,7 +486,7 @@ body {
 	position:absolute;
 	bottom:0;
 	width: 100%;
-	height: 30px;
+	height: 35px;
 	
 }
 
